--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ safe: true
 title : Bug.im
 author :
   name : Bug.im
-  email : xiaoxin11347@gmail.com
+  email : admin@bug.im
 
 production_url : http://bug.im
 
